--- a/src/message.css
+++ b/src/message.css
@@ -8,11 +8,22 @@
     max-width: 300px;
     animation-name: mesanim;
     animation-duration: 0.2s;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .mess-cont p{
     word-wrap: break-word;
     word-break:break-all;
+}
+
+.time{
+    font-size: 10px;
+    color: rgb(0, 0, 0);
+    margin-right: 4px;
+    min-width: 40px;
 }
 
 .sen{
