--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,16 @@
   background-color: rgb(77, 75, 73);
 }
 
+.prev-chats{
+  position: absolute;
+  top: 0;
+  left: 10px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 10px 10px rgb(88, 88, 87);
+  border-radius: 10px;
+}
+
 @media only screen and (max-width:450px){
   .chat-box{
     width: 100%;
