--- a/src/prevchats.css
+++ b/src/prevchats.css
@@ -6,9 +6,12 @@
     border-radius: 10px;
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    padding:0 10px 0 10px;
     cursor: pointer;
     transition: all 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .chatid-cont:hover{
@@ -28,4 +31,29 @@
     width: 200px;
     border-radius: 10px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.online{
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-color: green;
+    box-shadow: 0 0 10px 3px green;
+    animation: onlineanim 2s infinite;
+}
+
+.offline{
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-color: rgb(255, 0, 0);
+    box-shadow: 0 0 10px 3px rgb(255, 0, 0);
+}
+
+@keyframes onlineanim{
+    0% {opacity: 1;}
+    50% {opacity: 0.5;}
 }
