--- a/src/App.css
+++ b/src/App.css
@@ -83,20 +83,42 @@
   height: 10%;
   border-radius: 0 0 30px 30px;
   overflow: hidden;
+  display: flex;
 }
 
-.input-send input{
+.input-send div{
   height: 100%;
-  width: 70%;
+  width: 80%;
   border: none;
   outline: none;
   color: rgb(0, 0, 0);
-  padding: 5px;
+  background-color: white;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.input-send div p{
+  margin-left: 10px;
+  font-size: 35px;
+  height: 100%;
+  margin-right: 10px;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.input-send div input{
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
   font-size: 16px;
 }
 
 .input-send button{
-  width: 30%;
+  width: 20%;
   height: 100%;
   color: aquamarine;
   background-color: black;
@@ -106,6 +128,34 @@
   border: none;
   cursor: pointer;
 }
+
+.join{
+  height: 10%;
+  width: 100%;
+  border-radius: 0 0 30px 30px;
+  overflow: hidden;
+}
+
+.join button{
+  width: 20%;
+  height: 100%;
+  color: aquamarine;
+  background-color: black;
+  font-weight: bolder;
+  font-size: 20px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.join input{
+  width: 80%;
+  height: 100%;
+  outline: none;
+  border: none;
+  font-size: 16px;
+}
+
 
 .input-send button:active{
   background-color: rgb(77, 75, 73);
