--- a/src/prevchats.css
+++ b/src/prevchats.css
@@ -2,7 +2,7 @@
     width: 200px;
     margin: 5px;
     height: 40px;
-    background-color: azure;
+    background-color: rgb(176, 202, 202);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -51,6 +51,20 @@
     border-radius: 5px;
     background-color: rgb(255, 0, 0);
     box-shadow: 0 0 10px 3px rgb(255, 0, 0);
+}
+
+.notif{
+    border-radius:10px;
+    background-color:rgb(0, 77, 0);
+    height:20px;
+    width:20px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:bolder;
+    margin-left:10px;
+    color:rgb(252, 252, 252);
+    font-size:10px
 }
 
 @keyframes onlineanim{
